# cookiecutter-django

hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  makefile  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/config/: api_urls.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py
{{cookiecutter.project_slug}}/requirements/: README.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/: README.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: models.py  urls.py
