[tool.black]
line-length = 100
exclude = '''
/(
  | migrations
  | venv
  | .venv
)/
'''

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "3.10"
pytz = "^2021.3"
python-slugify = "^5.0.2"
Pillow = "^9.0.0"
argon2-cffi = "^21.3.0"
whitenoise = "^5.3.0"
redis = "^4.1.0"
hiredis = "^2.0.0"
celery = "^5.2.3"
django-celery-beat = "^2.2.1"
flower = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
django-environ = "^0.8.1"
django-model-utils = "^4.2.0"
django-allauth = "^0.47.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
django-redis = "^5.2.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
gunicorn = "^20.1.0"
sentry-sdk = "^1.5.2"
django-storages = {extras = ["boto3"], version = "^1.12.3"}
django-anymail = {extras = ["mailgun"], version = "^8.4"}
pygam = "^0.8.0"
psycopg2 = "^2.9.3"
httpx = "^0.21.3"
django-extensions = "^3.1.5"
drf-spectacular = "^0.21.1"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0.2"
ipdb = "^0.13.9"
watchgod = "^0.7"
mypy = "^0.931"
django-stubs = "^1.9.0"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
djangorestframework-stubs = "^1.4.0"
Sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.2"
black = "^21.12b0"
pylint-django = "^2.5.0"
pylint-celery = "^0.3"
pre-commit = "^2.16.0"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.2.4"
django-coverage-plugin = "^2.0.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.1.0"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
radon = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
